--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -13,98 +13,100 @@
              d:DesignWidth="300"
              d:DataContext="{d:DesignInstance Type=vm:ToolWindowViewModel}"
              x:Name="ToolWindow">
-
     <Grid>
-            <TreeView Name="TreeView" 
+        <TreeView Name="TreeView" 
                       ItemsSource="{Binding Items}" 
                       Background="Transparent" 
                       BorderThickness="0" 
                       Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
-                
-                <TreeView.ContextMenu>
-                    <ContextMenu>
-                        <MenuItem Header="New Item" Command="{Binding Path=PlacementTarget.Tag.DataContext.AddItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"/>
-                        <MenuItem Header="New Folder" Command="{Binding Path=PlacementTarget.Tag.DataContext.AddFolderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"/>
-                    </ContextMenu>
-                </TreeView.ContextMenu>
 
-                <TreeView.Resources>
+            <TreeView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="New Item" Command="{Binding Path=PlacementTarget.Tag.DataContext.AddItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"/>
+                    <MenuItem Header="New Folder" Command="{Binding Path=PlacementTarget.Tag.DataContext.AddFolderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"/>
+                </ContextMenu>
+            </TreeView.ContextMenu>
 
-                    <!--Folder-->
-                    <HierarchicalDataTemplate DataType="{x:Type models:Folder}" ItemsSource="{Binding Items}">
-                        <StackPanel Height="30" 
-                                    Width="150"
-                                    Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
-                            <StackPanel.ContextMenu>
-                                <ContextMenu>
-                                    <MenuItem Header="New Item" 
+            <TreeView.Resources>
+
+                <!--Folder-->
+                <HierarchicalDataTemplate DataType="{x:Type models:Folder}" ItemsSource="{Binding Items}">
+                    <StackPanel Height="30" 
+                                Width="200"
+                                Orientation="Horizontal"
+                                Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
+                        <StackPanel.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="New Item" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.AddItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}"/>
-                                    <MenuItem Header="New Folder" 
+                                <MenuItem Header="New Folder" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.AddFolderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}"/>
-                                    <Separator/>
-                                    <MenuItem Header="Rename" 
+                                <Separator/>
+                                <MenuItem Header="Rename" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.RenameCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}"/>
-                                    <MenuItem Header="Remove" 
+                                <MenuItem Header="Remove" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.RemoveCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}"/>
-                                </ContextMenu>
-                            </StackPanel.ContextMenu>
+                            </ContextMenu>
+                        </StackPanel.ContextMenu>
 
-                            <views:EditableTextBlock Text="{Binding Name}" 
+                        <Rectangle Width="5"  Margin="0,0,5,0" />
+
+                        <views:EditableTextBlock Text="{Binding Name}" 
                                                      VerticalAlignment="Center"
                                                      IsEditing="{Binding IsEditing}" 
                                                      SaveCommand="{Binding DataContext.SaveCommand, ElementName=ToolWindow}" />
-                        </StackPanel>
-                    </HierarchicalDataTemplate>
+                    </StackPanel>
+                </HierarchicalDataTemplate>
 
-                    <!--Item-->
-                    <DataTemplate DataType="{x:Type models:Item}">
-                        <StackPanel Orientation="Horizontal"
+                <!--Item-->
+                <DataTemplate DataType="{x:Type models:Item}">
+                    <StackPanel Orientation="Horizontal"
                                     Width="200"
                                     Height="30"
                                     Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
-                            <StackPanel.ContextMenu>
-                                <ContextMenu>
-                                    <MenuItem Header="Disable" 
+                        <StackPanel.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="Disable" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.DisableItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}"/>
-                                    <MenuItem Header="Rename" 
+                                <MenuItem Header="Rename" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.RenameCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}"/>
-                                    <MenuItem Header="Remove" 
+                                <MenuItem Header="Remove" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.RemoveCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}"/>
-                                    <MenuItem Header="Properties" 
+                                <MenuItem Header="Properties" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.ShowPropertiesCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}"/>
-                                </ContextMenu>
-                            </StackPanel.ContextMenu>
+                            </ContextMenu>
+                        </StackPanel.ContextMenu>
 
-                            <Rectangle Width="5" Fill="{Binding Brush}" Margin="0,0,5,0" />
+                        <Rectangle Width="5" Fill="{Binding Brush}" Margin="0,0,5,0" />
 
-                            <views:EditableTextBlock Text="{Binding Name}"
+                        <views:EditableTextBlock Text="{Binding Name}"
                                                      VerticalAlignment="Center"
                                                      IsEditing="{Binding IsEditing}" 
                                                      SaveCommand="{Binding DataContext.SaveCommand, ElementName=ToolWindow}" />
-                        </StackPanel>
-                    </DataTemplate>
+                    </StackPanel>
+                </DataTemplate>
 
-                </TreeView.Resources>
+            </TreeView.Resources>
 
-                <TreeView.ItemContainerStyle>
-                    <Style TargetType="TreeViewItem">
-                        <Setter Property="Margin" Value="3" />
-                        <Setter Property="Background" Value="WhiteSmoke" />
-                        <Setter Property="VerticalAlignment" Value="Center" />
-                        <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
-                        <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
-                    </Style>
-                </TreeView.ItemContainerStyle>
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="TreeViewItem">
+                    <Setter Property="Margin" Value="3" />
+                    <Setter Property="Background" Value="WhiteSmoke" />
+                    <Setter Property="VerticalAlignment" Value="Center" />
+                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
+                </Style>
+            </TreeView.ItemContainerStyle>
 
-            </TreeView>
+        </TreeView>
     </Grid>
 
 </UserControl>
