--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -56,9 +56,10 @@
                         <Rectangle Width="5"  Margin="0,0,5,0" />
 
                         <views:EditableTextBlock Text="{Binding Name}" 
-                                                     VerticalAlignment="Center"
-                                                     IsEditing="{Binding IsEditing}" 
-                                                     SaveCommand="{Binding DataContext.SaveCommand, ElementName=ToolWindow}" />
+                                                 FontWeight="Bold"
+                                                 VerticalAlignment="Center"
+                                                 IsEditing="{Binding IsEditing}" 
+                                                 SaveCommand="{Binding DataContext.SaveCommand, ElementName=ToolWindow}" />
                     </StackPanel>
                 </HierarchicalDataTemplate>
 
