--- a/src/AnyStatus/Features/NewItemWizard/NewItemDialog.xaml
+++ b/src/AnyStatus/Features/NewItemWizard/NewItemDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="AnyStatus.Views.NewStatusDialog"
+﻿<Window x:Class="AnyStatus.Views.NewItemDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,12 +8,11 @@
              xmlns:local="clr-namespace:AnyStatus.Views"
              xmlns:vm="clr-namespace:AnyStatus.ViewModels"
              mc:Ignorable="d" 
-             Height="400"
-             Width="500"
-             Background="{DynamicResource {x:Static vsp:EnvironmentColors.ToolWindowBackgroundBrushKey}}"
-             Foreground="{DynamicResource {x:Static vsp:EnvironmentColors.ToolWindowTextBrushKey}}"
-             Title="New Status"
-             d:DataContext="{d:DesignInstance Type=vm:NewStatusViewModel}">
+             Height="350"
+             Width="550"
+             WindowStartupLocation="CenterOwner"
+             Title="New"
+             d:DataContext="{d:DesignInstance Type=vm:NewItemViewModel}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition MinWidth="100" Width="Auto"></ColumnDefinition>
