--- a/src/AnyStatus/Features/Edit/EditWindow.xaml
+++ b/src/AnyStatus/Features/Edit/EditWindow.xaml
@@ -7,31 +7,32 @@
              xmlns:local="clr-namespace:AnyStatus.Features.Edit"
              mc:Ignorable="d" 
              Height="300" 
-             Width="400"
-             WindowStartupLocation="CenterOwner"
+             Width="500"
+             WindowStartupLocation="CenterScreen"
              Title="Edit"
              d:DataContext="{d:DesignInstance Type=local:EditViewModel}">
     <Grid>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <xctk:PropertyGrid Grid.Row="0"
-                           Margin="3"
+        <StackPanel Grid.Row="0" Orientation="Vertical">
+            <TextBlock  FontSize="24" Text="{Binding Item.Name}" Margin="15,5,5,5"></TextBlock>
+            <xctk:PropertyGrid Margin="3"
                            ShowSearchBox="False" 
                            ShowSortOptions="False" 
                            ShowSummary="True"
-                           ShowTitle="True"
+                           ShowTitle="False"
+                           Background="White"
                            BorderBrush="{x:Null}"
-                           SelectedObject="{Binding Item}">
-            
-        </xctk:PropertyGrid>
+                           SelectedObject="{Binding Item}"/>
+        </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Command="{Binding SaveCommand}" Width="70" Margin="3">Save</Button>
-            <Button Command="{Binding CancelCommand}" Width="70" Margin="3">Cancel</Button>
+            <Button Command="{Binding SaveCommand}" Width="70" Margin="5">Save</Button>
+            <Button Command="{Binding CancelCommand}" Width="70" Margin="5">Cancel</Button>
         </StackPanel>
 
     </Grid>
