--- a/src/AnyStatus/Features/New/NewWindow.xaml
+++ b/src/AnyStatus/Features/New/NewWindow.xaml
@@ -12,7 +12,7 @@
              Width="650"
              WindowStartupLocation="CenterScreen"
              Title="New"
-             d:DataContext="{d:DesignInstance Type=vm:NewViewModel}">
+             d:DataContext="{d:DesignInstance Type=vm:NewViewModel}" Icon="/AnyStatus;component/Resources/StatusSecurityOK_16x.png">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition MinWidth="100" Width="Auto"></ColumnDefinition>
